--- a/pixelitor.desktop
+++ b/pixelitor.desktop
@@ -3,8 +3,7 @@ Type=Application
 Name=Pixelitor
 Exec=/PATH/TO/PIXELITOR/Pixelitor.sh
 Icon=/PATH/TO/ICON/icon1.png
-Categories=Image Editor;
+Categories=Image Editing;
 Terminal=false
 Keywords=image editing;
 MimeType=application/x-pixelitor;
-
